Update: index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <body>
 <div id="Content">
   <h2>Welcome to JPetStore 6</h2>
+  <h3>Ce site est en construction</h3>
 
   <p><a href="actions/Catalog.action">Enter the Store</a></p>
 
